fix right-alignment of headings in Firefox

--- a/css/booklit.css
+++ b/css/booklit.css
@@ -725,7 +725,6 @@ body.index .page-content h2 {
   margin-bottom: 14px;
   font-size: 19px;
   border: 0;
-  align-self: end;
   margin-top: 64px;
 }
 body.index .page-content h2:first-child {
