--- a/less/index.less
+++ b/less/index.less
@@ -58,7 +58,6 @@ body.index .page-content h2 {
   margin-bottom: 14px;
   font-size: 19px;
   border: 0;
-  align-self: end;
 
   margin-top: 64px;
 
